contrib/sync_db_pools/codegen/tests/ui-fail-stable/database-types.stderr
error[E0463]: can't find crate for `rocket_sync_db_pools`
 --> tests/ui-fail-stable/database-types.rs:1:14
  |
1 | #[macro_use] extern crate rocket_sync_db_pools;
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: cannot find attribute `database` in this scope
 --> tests/ui-fail-stable/database-types.rs:8:3
  |
8 | #[database("foo")]
  |   ^^^^^^^^
  |
help: consider importing one of these attribute macros
  |
1 + use rkt_sync_db_pools::database;
  |
1 + use rkt_sync_db_pools_codegen::database;
  |

error: cannot find attribute `database` in this scope
 --> tests/ui-fail-stable/database-types.rs:5:3
  |
5 | #[database("foo")]
  |   ^^^^^^^^
  |
help: consider importing one of these attribute macros
  |
1 + use rkt_sync_db_pools::database;
  |
1 + use rkt_sync_db_pools_codegen::database;
  |
